#
# Copyright (c) 2015 Martin Sustrik  All rights reserved.
# Copyright (c) 2013 Luca Barbato
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom
# the Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

ACLOCAL_AMFLAGS = -I m4

################################################################################
#  dsock library                                                               #
################################################################################

dsockincludedir = $(includedir)
dsockinclude_HEADERS = dsock.h

lib_LTLIBRARIES = libdsock.la

libdsock_la_SOURCES = \
    bsock.h \
    bsock.c \
    bthrottler.c \
    btrace.c \
    crlf.c \
    fd.h \
    fd.c \
    iov.h \
    iov.c \
    ipaddr.c \
    keepalive.c \
    lz4.c \
    msock.h \
    msock.c \
    mthrottler.c \
    mtrace.c \
    nacl.c \
    nagle.c \
    pfx.c \
    tcp.c \
    udp.c \
    unix.c \
    utils.h \
    utils.c \
    dns/dns.h \
    dns/dns.c \
    lz4/lz4.h \
    lz4/lz4.c \
    lz4/lz4frame.h \
    lz4/lz4frame.c \
    lz4/lz4frame_static.h \
    lz4/lz4hc.h \
    lz4/lz4hc.c \
    lz4/xxhash.h \
    lz4/xxhash.c \
    tweetnacl/tweetnacl.h \
    tweetnacl/tweetnacl.c

libdsock_la_LDFLAGS = -no-undefined -version-info \
    @DSOCK_LIBTOOL_VERSION@

libdsock_la_CFLAGS = \
    -fvisibility=hidden\
    -DDSOCK_EXPORTS

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = dsock.pc

################################################################################
#  tutorial                                                                    #
################################################################################

noinst_PROGRAMS = \
    tutorial/step1 \
    tutorial/step2 \
    tutorial/step3 \
    tutorial/step4 \
    tutorial/step5 \
    tutorial/step6

################################################################################
#  automated tests                                                             #
################################################################################

check_PROGRAMS = \
    tests/tcp \
    tests/udp \
    tests/unix \
    tests/pfx \
    tests/crlf \
    tests/bthrottler \
    tests/mthrottler \
    tests/nagle \
    tests/lz4 \
    tests/btrace \
    tests/mtrace \
    tests/nacl \
    tests/keepalive \
    tests/fullstack \
    tests/iovec

LDADD = libdsock.la

TESTS = $(check_PROGRAMS)

################################################################################
#  additional packaging-related stuff                                          #
################################################################################

#  Generate ChangeLog file from git.
#  Also, there's no git availabe when building from the source package and
#  thus no way to obtain package version. Therefore, package version is
#  saved into a file when building a source package.
dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog; \
		cd "$(top_srcdir)"; \
		(echo '# Generated by Makefile. Do not edit.'; echo; \
		  ./missing --run git log --decorate ) > ChangeLog.tmp; \
		mv -f ChangeLog.tmp $(top_distdir)/ChangeLog; \
		rm -f ChangeLog.tmp; \
    else \
        cp -f ChangeLog $(top_distdir)/ChangeLog || \
        echo Failed to generate ChangeLog >&2; \
	fi; \
	$(srcdir)/package_version.sh > $(distdir)/.version

EXTRA_DIST = \
    ./abi_version.sh \
    ./package_version.sh

distclean-local:
	-rm -f config.h

